--- a/templates/book_loan.html
+++ b/templates/book_loan.html
@@ -1,6 +1,6 @@
 {% extends "baselib.html" %}
 
-{% block title %}J Bookstore{% endblock %}
+{% block title %}Library Book Loan{% endblock %}
 
 {% block content %}
 <br>
